# imageSVD

./: .gitignore  README.md  pyproject.toml
cdisvd/: common.py  compress.py  decompress.py  main.py
cdisvd/svd/: block_power.py  common.py  numpy_svd.py  power_iterations.py
